--- a/UniversalBank/src/main/webapp/WEB-INF/web.xml
+++ b/UniversalBank/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,14 @@
 		<filter-name>NoCacheFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<filter>
+		<filter-name>XSS</filter-name>
+		<filter-class>edu.asu.ss2015.group4.filter.CrossScriptingFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>XSS</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<servlet>
 		<servlet-name>spring-mvc</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
